--- a/Exercises/tsconfig.json
+++ b/Exercises/tsconfig.json
@@ -1,5 +1,18 @@
 {
   "compilerOptions": {
-    "noImplicitAny": false
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "strictBindCallApply": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "skipLibCheck": true
   }
 }
+
+
