--- a/flightDiaries/package.json
+++ b/flightDiaries/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "eslint": "^9.19.0",
     "ts-node-dev": "^2.0.0",
@@ -21,6 +22,7 @@
     "typescript-eslint": "^8.22.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   }
 }
